--- a/app/src/main/res/layout/fragment_exit_selection.xml
+++ b/app/src/main/res/layout/fragment_exit_selection.xml
@@ -15,8 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        >
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
@@ -40,8 +39,7 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-        >
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/tv_description"
@@ -59,6 +57,7 @@
                 android:paddingVertical="@dimen/compact_padding"
                 android:focusable="true"
                 android:clickable="true"
+                android:background="@drawable/bg_config_item"
                 android:id="@+id/automatic_container">
 
 
