--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -2,16 +2,16 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:viewportWidth="432"
+    android:viewportHeight="432">
   <path
-      android:pathData="m0,0h108v108h-108z">
+      android:pathData="M0,0h432v432h-432z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startX="54"
+          android:startX="216"
           android:startY="0"
-          android:endX="54"
-          android:endY="108"
+          android:endX="216"
+          android:endY="432"
           android:type="linear">
         <item android:offset="0.25" android:color="#FF18242F"/>
         <item android:offset="0.99" android:color="#FF3C319C"/>
