--- a/app/src/main/res/layout/fragment_offline_help.xml
+++ b/app/src/main/res/layout/fragment_offline_help.xml
@@ -6,7 +6,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:background="@color/surface"
         tools:context="org.torproject.vpn.ui.help.OfflineHelpFragment">
 
@@ -14,10 +13,10 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/surface"
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
-            app:liftOnScroll="false"
+            app:liftOnScroll="true"
             app:elevation="0dp"
+            android:fitsSystemWindows="true"
             >
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
@@ -25,16 +24,26 @@
                 app:navigationIcon="?attr/homeAsUpIndicator"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
                 app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
         </com.google.android.material.appbar.AppBarLayout>
 
-        <WebView
-            android:id="@+id/wv_help"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/surface"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context="org.torproject.vpn.ui.help.OfflineHelpFragment"/>
+            >
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <WebView
+                    android:id="@+id/wv_help"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/surface"
+                    android:nestedScrollingEnabled="true"
+                    tools:context="org.torproject.vpn.ui.help.OfflineHelpFragment"/>
+            </FrameLayout>
+        </androidx.core.widget.NestedScrollView>
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
