--- a/app/src/main/res/layout-land/fragment_help.xml
+++ b/app/src/main/res/layout-land/fragment_help.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:liftOnScroll="false"
+            app:liftOnScroll="true"
             app:elevation="0dp"
             android:theme="@style/Theme.TorVPN.AppBarOverlay">
 
@@ -30,14 +30,15 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:title="@string/help"
-                android:background="?attr/colorPrimary"
                 app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/landscape_help_scroll_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clipToPadding="false"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.appcompat.widget.LinearLayoutCompat
