--- a/app/src/main/res/layout-land/include_configure_toolbar.xml
+++ b/app/src/main/res/layout-land/include_configure_toolbar.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/Widget.Material3.Toolbar"
     android:id="@+id/toolbar"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
     app:layout_collapseMode="pin"
     app:popupTheme="@style/Theme.TorVPN.PopupOverlay"
     app:title="@string/action_configure" />
