--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -63,7 +63,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
-                        android:background="@drawable/bg_config_item"
+                        android:background="@drawable/bg_config_item_top_curve"
                         android:weightSum="1"
                         android:clickable="true"
                         android:focusable="true"
@@ -96,7 +96,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
-                        android:background="@drawable/bg_config_item"
+                        android:background="@drawable/bg_config_item_square"
                         android:weightSum="1"
                         android:clickable="true"
                         android:focusable="true"
@@ -130,7 +130,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
-                        android:background="@drawable/bg_config_item"
+                        android:background="@drawable/bg_config_item_bottom_curve"
                         android:weightSum="1"
                         android:clickable="true"
                         android:focusable="true"
