--- a/app/src/main/res/layout/bridge_request_entry_view.xml
+++ b/app/src/main/res/layout/bridge_request_entry_view.xml
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
             app:layout_constraintEnd_toEndOf="parent"
-            android:paddingHorizontal="@dimen/compact_padding"
+            android:paddingHorizontal="@dimen/default_padding"
             android:singleLine="true"
             android:ellipsize="end"
             tools:text="a long test that should not touch the divider letsee"
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:paddingHorizontal="@dimen/compact_padding"
+            android:paddingHorizontal="@dimen/default_padding"
             android:maxLines="2"
             android:ellipsize="end"
             tools:text="a long test that should not touch the divider letsee"
@@ -60,8 +60,10 @@
             android:layout_height="wrap_content"
             android:importantForAccessibility="no"
             android:src="@drawable/ic_arrow_up_right"
+            android:layout_marginHorizontal="@dimen/compact_padding"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="gone"
             tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
