--- a/app/src/main/res/layout/fragment_bridgesettings.xml
+++ b/app/src/main/res/layout/fragment_bridgesettings.xml
@@ -94,8 +94,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingHorizontal="@dimen/default_padding">
+                    android:layout_height="wrap_content">
 
                     <RadioGroup
                         android:id="@+id/rg_bridge_options"
@@ -151,11 +150,11 @@
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     android:focusable="true"
-                    android:paddingHorizontal="@dimen/default_padding"
                     android:onClick="@{handler::onManualBridgeSelectionClicked}"
                     android:visibility="@{viewModel.addManualSelectionVisibility}"
                     app:drawable="@drawable/plus"
                     app:secondaryText="@string/bridge_address_description"
+                    android:background="@drawable/bg_config_item_square"
                     app:text="@string/add_new_bridge" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -175,7 +174,6 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/default_padding"
                     android:layout_marginTop="4dp"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/default_padding">
@@ -185,6 +183,8 @@
                         android:layout_height="wrap_content"
                         android:onClick="@{handler::onTorBridgeBotClicked}"
                         android:visibility="visible"
+                        android:background="@drawable/bg_config_item_square"
+                        android:paddingHorizontal="@dimen/compact_padding"
                         app:drawable="@drawable/bridge_bot_icon"
                         app:external="false"
                         app:secondaryText="@string/ask_bridge_bot"
@@ -194,6 +194,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:onClick="@{handler::onEmailBridgeBotClicked}"
+                        android:background="@drawable/bg_config_item_square"
+                        android:paddingHorizontal="@dimen/compact_padding"
                         app:drawable="@{viewModel.emailDrawable}"
                         app:secondaryText="@{viewModel.formattedEmailBotSubtitle}"
                         app:text="@string/email_providers"
@@ -204,6 +206,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:onClick="@{handler::onWebBridgeBotClicked}"
+                        android:background="@drawable/bg_config_item_square"
+                        android:paddingHorizontal="@dimen/compact_padding"
                         app:drawable="@{viewModel.webbrowserDrawable}"
                         app:secondaryText="@{viewModel.formattedWebBotSubtitle}"
                         app:text="@string/web"
@@ -219,6 +223,8 @@
                         app:secondaryText="@{viewModel.formattedTelegramBotSubtitle}"
                         app:text="@string/telegram"
                         tools:drawable="@drawable/ic_dummy_app"
+                        android:background="@drawable/bg_config_item_square"
+                        android:paddingHorizontal="@dimen/compact_padding"
                         tools:secondaryText="@{viewModel.formattedTelegramBotSubtitle" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
